...
    android:layout_marginTop="37dp"
    android:orientation="vertical"
    tools:context="com.example.alaazuhour.bakery.fragment.RecipeStepDetailFragment">


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp" />
...
